--- a/startpage.html
+++ b/startpage.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang=“ja”>
+ <head>
+  <meta http-equiv="content-language" content="ja">
+  <meta name="fortune teller" content="noindex,nofollow">
+  <meta charset="UTF-8">
+  <title>おみくじrecursion</title>
+  <!---->
+  <link rel="stylesheet" href="startpage.css">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <!-- fontawesome -->
+  <link href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" rel="stylesheet">
+ </head>
+ <body>
+    <div class="vh-100 bg-grad d-flex flex-column justify-content-center align-items-center">
+        <div>
+            <h1 class="text-center"  >おみくじ</h1>
+        </div>
+        <div>
+            <img src="syougatsu2_omijikuji2.png" class="text-align-items image-fluid">
+        </div>
+        <div>
+            <button class="btn btn-danger btn-lg border-radious">おみくじを引く</button>
+        </div>
+    </div
+ </body>
+ <!-- footer -->
+ <footer class="bg-footer d-flex flex-column justify-content-center align-items-center">
+    <p>© All rights reserved by teamD.</p>
+</footer>
+</html>
 
