--- a/result.html
+++ b/result.html
@@ -18,26 +18,28 @@
 
   <body>
     <div class="vh-100 container-fluid bg-success">
-        <div class="pt-5 d-flex justify-content-center text-center align-items-center">
+        <div class="pt-5 d-flex justify-content-center text-center align-items-center row">
           <div class="col-12 d-flex justify-content-center text-center align-items-center">
-            <div class="card m-3 col-2 p-1" style="width: 30rem">
+            <div class="card m-3 col-3 p-1 set" style="width: 30rem">
               <div class="card-body">
-                <h4 class=>おみくじ結果</h4>
-                <h2 class=>【大吉】</h2>
-                <p>今日はいいことがあるでしょう</p>
-                <div class=>
-                    <h6>ラッキーアイテム</h6>
-                    <p>たぬきの置物</p>
+                <h5 class="top">おみくじ結果</h5>
+                <h1 class="result">【大吉】</h1>
+                <p class="comment">今日はいいことがあるでしょう</p>
+                <div class="element">
+                    <p class="item">ラッキーアイテム</p>
+                    <p class="thing">たぬきの置物</p>
                 </div>
-                <div class=>
-                    <h6>ラッキーカラー</h6>
-                    <p>黄色</p>
+                <div class="element">
+                    <p class="item">ラッキーカラー</p>
+                    <p class="thing">黄色</p>
                 </div>
-                <button class="btn btn-danger mb-2">
-                    戻る
-                </button>
               </div>
             </div>
+          </div>
+          <div class="col-10">
+            <button class="btn btn-danger mb-2">
+            戻る
+            </button>
           </div>
         </div>
       </div>
