--- a/result.html
+++ b/result.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <div class="vh-100 container-fluid bg-success">
+    <div class="vh-100 container-fluid back">
         <div class="pt-5 d-flex justify-content-center text-center align-items-center row">
           <div class="col-12 d-flex justify-content-center text-center align-items-center">
             <div class="card m-3 col-3 p-1 set" style="width: 30rem">
@@ -37,11 +37,12 @@
             </div>
           </div>
           <div class="col-10">
-            <button class="btn btn-danger mb-2">
+            <button class="btn btn-danger mb-2" id="btn" onclick="location.href=`startpage.html`">
             戻る
             </button>
           </div>
         </div>
       </div>
+      <script src="result.js"></script>
   </body>
 </html>
