--- a/result.html
+++ b/result.html
@@ -23,15 +23,15 @@
             <div class="card m-3 col-3 p-1 set" style="width: 30rem">
               <div class="card-body">
                 <h5 class="top">おみくじ結果</h5>
-                <h1 class="result">【大吉】</h1>
-                <p class="comment">今日はいいことがあるでしょう</p>
+                <h1 class="result" id="result">【大吉】</h1>
+                <p class="comment" id="comment"></p>
                 <div class="element">
                     <p class="item">ラッキーアイテム</p>
-                    <p class="thing">たぬきの置物</p>
+                    <p class="thing" id="item"></p>
                 </div>
                 <div class="element">
                     <p class="item">ラッキーカラー</p>
-                    <p class="thing">黄色</p>
+                    <p class="thing" id="color"></p>
                 </div>
               </div>
             </div>
@@ -43,6 +43,6 @@
           </div>
         </div>
       </div>
-      <script src="result.js"></script>
+      <script src="random.js"></script>
   </body>
 </html>
