add screen change

--- a/result.html
+++ b/result.html
@@ -37,7 +37,7 @@
             </div>
           </div>
           <div class="col-10">
-            <button class="btn btn-danger mb-2" id="btn" onclick="location.href=`startpage.html`">
+            <button class="btn btn-danger mb-2" id="btn">
             戻る
             </button>
           </div>
